External edited texture applied with incorrect projection (wrong lens settings?) #85395

Closed
opened 2021-02-05 08:00:19 +01:00 by Vlad Kuzmin · 9 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.09

Blender Version
Broken: version: 2.92.0 Beta, branch: master, commit date: 2021-01-20 18:59, hash: c60c30205d
from 2.92~2.93 not working.
Worked: 2.91

Caused by 5b34d11b55.

Short description of error
Edit with External editor apply back to texture with incorrect projection.
image.png

Correct should looks like this:
image.png

Exact steps for others to reproduce the error
New project.
Add suzane.
Add material and create empty texture.
Paint anything.
pose model as desired.
Press External Edit.
Paint on new layer (or same layer) in PNG in external editor.
Save.
Apply in Blender.

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.09 **Blender Version** Broken: version: 2.92.0 Beta, branch: master, commit date: 2021-01-20 18:59, hash: `c60c30205d` from 2.92~2.93 not working. Worked: 2.91 Caused by 5b34d11b55. **Short description of error** Edit with External editor apply back to texture with incorrect projection. ![image.png](https://archive.blender.org/developer/F9646263/image.png) Correct should looks like this: ![image.png](https://archive.blender.org/developer/F9646309/image.png) **Exact steps for others to reproduce the error** New project. Add suzane. Add material and create empty texture. Paint anything. pose model as desired. Press External Edit. Paint on new layer (or same layer) in PNG in external editor. Save. Apply in Blender.
Author

Added subscriber: @ssh4

Added subscriber: @ssh4
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser self-assigned this 2021-02-05 14:30:57 +01:00
Member

Can confirm, will check

Can confirm, will check
Member

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Member

This is caused by 5b34d11b55.

That commit restored the view matrices before they can be stored in the ImBuff (see ED_view3d_draw_offscreen / texture_paint_image_from_view_exec)
Think we should either make the used view matrices available to the caller (or not generally restore them -- but instead do this by hand in the specific case mentioned in 5b34d11b55).
Will try something out (but in case this takes too long, will pass on to @ideasman42 .

Marking as High priority since it is a regression.

This is caused by 5b34d11b55. That commit restored the view matrices before they can be stored in the ImBuff (see `ED_view3d_draw_offscreen` / `texture_paint_image_from_view_exec`) Think we should either make the used view matrices available to the caller (or **not** generally restore them -- but instead do this by hand in the specific case mentioned in 5b34d11b55). Will try something out (but in case this takes too long, will pass on to @ideasman42 . Marking as High priority since it is a regression.
Member
[D10331: Fix #85395: Texture paint external edit wrong projection on reapply](https://archive.blender.org/developer/D10331) seems to do the trick

This issue was referenced by 97cc130f47

This issue was referenced by 97cc130f472fa2e5e12ae07312abae2de7d409aa
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.92 milestone 2023-02-08 16:14:50 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#85395
No description provided.